<resources>
    <string name="app_name">My Movies</string>
    <string name="poster_of_movie">Poster of movie</string>
    <string name="most_popular">Most popular</string>
    <string name="top_rated">Top rated</string>
    <string name="add_to_favourite">Add to favourite</string>
    <string name="remove_from_favourite">Remove from favourite</string>
    <string name="item_main">Main</string>
    <string name="item_favourite">Favourite</string>
    <string name="play_trailer">Play trailer</string>
    <string name="title">Title:</string>
    <string name="original_title">Original title:</string>
    <string name="rate">Rate:</string>
    <string name="date_release">Date release:</string>
    <string name="description">Description:</string>
    <string name="reviews">Reviews:</string>
    <string name="trailers">Trailers:</string>

</resources>